syntax = "proto3";

package proto;
//Our HeroesService exposes a FindOne() method. 
//This method expects an 
//input argument of type HeroById and returns a Hero message
service HeroesService {
  rpc FindOne (HeroById) returns (Hero);
  rpc FindMany (stream HeroById) returns (stream Hero);
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}